# Rforestry

./: .Rbuildignore  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  _pkgdown.yml  libforestryCpp.dylib  manifest.in  pyproject.toml  random-forestry_sklearn.ipynb  test.py
.github/: release.yml
.github/workflows/: R.yaml  branch_naming.yml  check-noncontainerized.yaml  cpp.yaml  cross_language_test.yaml  docker.yaml  python.yaml
C++/: CMakeLists.txt
C++/src/: DataFrame.h  RFNode.cpp  RFNode.h  RcppExports.cpp  api.cpp  api.h  dataFrame.cpp  forestry.cpp  forestry.h  forestryTree.cpp  forestryTree.h  multilayerForestry.cpp  rcpp_cppBuildInterface.cpp  sampling.cpp  sampling.h  treeSplitting.cpp  utils.cpp  utils.h
Docker/python_build_environment/: Dockerfile
Python/: .bandit  .flake8  .gitignore  .pylintrc  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py  style.sh
Python/Rforestry/: Py_preprocessing.py  __init__.py  decorators.py  fit_validator.py  forestry.py  forestry_shadow.py  preprocessing.py  processed_dta.py  rforest  rforest.py  test.py
Python/Rforestry/validators/: base_validator.py  corrected_predict_validator.py  fit_validator.py
Python/docs/: conf.py
Python/docs/source/: api.rst  conf.py  index.rst  introduction.rst  usage.rst
Python/extension/: CMakeLists.txt  api.cpp  api.h  include  main.cpp
Python/extension/src/: api.cpp  api.h  main.cpp
Python/random_forestry/: __init__.py  forestry.py  preprocessing.py  test.py
Python/random_forestry/validators/: fit_validator.py  predict_validator.py
Python/tests/: helpers.py  test_aggregation_weights.py  test_bootstrap_prediction_intervals.py  test_conformal_intervals.py  test_constructor.py  test_differentAggregations.py  test_different_aggregations.py  test_fit.py  test_forestry.py  test_get_set_parameters.py  test_get_set_params.py  test_groups.py  test_hierarchical_shrinkage.py  test_predict.py  test_scale.py  test_seed.py  test_translate_tree.py
Python_explorations/C_Python/: test.c  test.py  test_sum.py
Python_explorations/Cpp_Python/: newtest.py  test.cpp  test.py
Python_explorations/Cpp_Python2/: mysum.cpp  setup.py  test.py
Python_package/: Py_preprocessing.py  forestry.py  lib_setup.py  test.py
R/: DESCRIPTION  NAMESPACE  README.md  R_preprocessing.R  RcppExports.R  adaptive_forestry.R  compute_rf_lp.R  export_json.R  forestry.R  plottree.R  src
R-package/: DESCRIPTION
R-package/R/: compute_rf_lp.R  forestry.R  plottree.R
R-package/man/: correctedPredict-forestry.Rd  predictInfo-forestry.Rd  training_data_checker-forestry.Rd
R-package/src/: RFNode.cpp  RFNode.h  RcppExports.cpp  api.cpp  forestry.cpp  forestry.h  forestryTree.cpp  forestryTree.h  libforestryCpp.dylib  rcpp_cppBuildInterface.cpp  utils.cpp  utils.h
R/R/: RcppExports.R  forestry.R  plottree.R
R/docs/: authors.html  sitemap.xml
R/man/: adaptiveForestry-forestry.Rd  forestry.Rd  getOOB-forestry.Rd  getOOBpreds-forestry.Rd  getVI-forestry.Rd  multilayer-forestry.Rd  plot-forestry.Rd  predict-forestry.Rd  predictInfo-forestry.Rd  training_data_checker-forestry.Rd
R/vignettes/: sampling.Rmd
docs/: 404.html  authors.html  index.html  index.md  pkgdown.yml  search.json  sitemap.xml
docs/reference/: CppToR_translator.html  adaptiveForestry-forestry.html  addTrees-forestry.html  autoforestry-forestry.html  autohonestRF.html  compute_lp-forestry.html  correctedPredict-forestry.html  forest_checker.html  forestry-class.html  forestry.html  getCI-forestry.html  getOOB-forestry.html  getOOBpreds-forestry.html  getSplitProps-forestry.html  getVI-forestry.html  honestRF.html  impute_features.html  index.html  loadForestry-forestry.html  make_savable.html  plot-forestry.html  predict-adaptiveForestry.html  predict-forestry.html  predictInfo-forestry.html  preprocess_testing.html  preprocess_training.html  relinkCPP.html  saveForestry-forestry.html  scale_center.html  testing_data_checker-forestry.html  training_data_checker-forestry.html  unscale_uncenter.html
docs/source/: conf.py  index.rst  introduction.rst
man/: adaptiveForestry-forestry.Rd  bcPredict-forestry.Rd  compute_lp-forestry.Rd  correctedPredict-forestry.Rd  forestry.Rd  multilayer-forestry.Rd  plot-forestry.Rd  predict-forestry.Rd  predictInfo-forestry.Rd  scale_center.Rd  training_data_checker-forestry.Rd  unscale_uncenter.Rd
python-package/: MANIFEST.in  Py_preprocessing.py  docs.txt  forestry.py  forestry_initial.py  forestry_shadow.py  lib_setup.py  pyproject.toml  setup.py  test.py
python-package/Rforestry/: __init__.py  forestry.py  forestry_shadow.py
python-package/tests/: test_aggregation_weights.py  test_bootstrap_prediction_intervals.py  test_conformal_intervals.py  test_differentAggregations.py  test_forestry.py  test_get_set_params.py  test_scale.py  test_seed.py  test_translate_tree.py
src/: CMakeLists.txt  DataFrame.cpp  DataFrame.h  Makevars  Makevars.win  RFNode.cpp  RFNode.h  RcppExports.cpp  api.cpp  api.h  dataFrame.cpp  dataFrame.h  forestry.cpp  forestry.h  forestryCpp.cbp  forestryTree.cpp  forestryTree.h  libforestryCpp.dylib  multilayerForestry.cpp  multilayerForestry.h  rcpp_cppBuildInterface.cpp  sampling.cpp  sampling.h  treeSplitting.cpp  treeSplitting.h  utils.cpp  utils.h
test/: CMakeLists.txt
test/src/: main.cpp
tests/: R_test.R  python_test.py  test-predict_idx.R
tests/python_tests/: test_differentAggregations.py  test_forestry.py  test_seed.py
tests/testthat/: test-ExactPredict.R  test-OOBhonesty.R  test-OOBpredictions.R  test-bcPredict.R  test-bootstrapPredictionIntervals.R  test-coefs.R  test-compute_rf_lp.R  test-conformalIntervals.R  test-correctedPredict.R  test-forestry.R  test-forestry_OBB.R  test-forestry_weightmatrix.R  test-groupSampling.R  test-groups.R  test-hold_out_idx.R  test-impute_features.R  test-localConformal.R  test-max-depth.R  test-minSplitGain.R  test-missingData.R  test-multilayerForestry.R  test-nodesizeStrictAvg.R  test-observationWeights.R  test-predictInfo.R  test-predict_idx.R  test-ridgeRF.R  test-saveMultilayer.R  (+10 more)
(+47 files in other folders)
