[build-system]
requires = ["setuptools>=65.0.0", "wheel", "cmake>=3.12"]
build-backend = "setuptools.build_meta"

[project]
name = "random-forestry"
version = "1.0.0"
description = "Random forest estimator"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy >= 1.22.4",
    "pandas >= 1.4.2",
    "scikit-learn >= 1.1.1",
    "statsmodels >= 0.13.2",
    "dtreeviz >=1.4.0",
    "pydantic >=1.10.2",

    # Conditional dependencies
    'typing_extensions; python_version < "3.11"'
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["random_forestry", "random_forestry.validators"]
zip-safe = false

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest", "dtreeviz >= 1.3.3"]

[project.urls]
Homepage = "https://github.com/forestry-labs/Rforestry#readme"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"Rforestry/__init__.py" =[
    '^__version__ = "{version}"$'
]
